istio/service_entry_oneagent.yml
---
apiVersion: networking.istio.io/v1alpha3
kind: ServiceEntry
metadata:
  name: dynatrace-oneagent-hostnames
spec:
  hosts:
  - mup27836.live.dynatrace.com
  location: MESH_EXTERNAL
  ports:
  - number: 443
    name: HTTPS
    protocol: HTTPS
  resolution: DNS
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: dynatrace-oneagent-hostnames
spec:
  hosts:
  - mup27836.live.dynatrace.com
  tls:
  - match:
    - port: 443
      sni_hosts:
      - mup27836.live.dynatrace.com
    route:
    - destination:
        host: mup27836.live.dynatrace.com
        port:
          number: 443
          name: HTTPS
  - match:
    - port: 443
      sni_hosts:
      - mup27836.live.dynatrace.com
    route:
    - destination:
        host: mup27836.live.dynatrace.com
        port:
          number: 443
          name: HTTPS
